<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:minWidth="320dp"
    android:background="#fffafa">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_item"
        android:textColor="#1b5692"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_type"
        android:textColor="#1b5692"
        android:textSize="13sp"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp"
        android:background="@drawable/custom_dropdown"
        android:textColor="#1b5692" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity_label"
        android:textColor="#1b5692"
        android:textSize="13sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/quantityInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity_hint"
        android:textColorHint="#1b5692"
        android:textColor="#1b5692"
        android:backgroundTint="#1b5692"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="12sp"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/add"
            android:backgroundTint="#1b5692"
            android:layout_marginBottom="8dp"
            android:textColor="#fffafa"/>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="#1b5692"
            android:background="#97AAC5"
            android:text="@string/cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </LinearLayout>
</LinearLayout> 